welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: ';' expected but 'if' found.
	}if (estSurBiscuit){
         ^