welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (x <- 1 to 7){
	
	avance()
	}if (estSurBiscuit){
prendBiscuit()
}
for(y <- 1 to 7){
	recule()
	poseBiscuit()
}
